Fix z-index

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -29,6 +29,7 @@ header {
     position: sticky;
     top: 0;
     background-image: linear-gradient(to bottom, var(--background-color), color-mix(in srgb, var(--background-color), transparent 70%));
+    z-index: 1000;
 }
 
 footer {
